4.x.x (2018-xx-xx)
------------------

Bug fixes
 - [core] handle multi-valued mozillasecondemail attribute mapping

4.0.1 (2018-07-10)
------------------

Enhancements
 - [web] now possible to show events/task for the current year
 - [web] show current ordering setting in lists
 - [web] remove invalid occurrences when modifying a recurrent event
 - [web] updated Angular to version 1.7.2
 - [web] updated Angular Material to version 1.1.10
 - [web] updated CKEditor to version 4.10.0
 - [web] allow mail flag addition/edition on mobile
 - [web] added Japanese (jp) translation - thanks to Ryo Yamamoto

Bug fixes
 - [core] properly update the last-modified attribute (#4313)
 - [core] fixed default data value for c_hascertificate (#4442)
 - [core] fixed ACLs restoration with sogo-tool in single store mode (#4385)
 - [core] fixed S/MIME code with chained certificates
 - [web] prevent deletion of special folders using del key
 - [web] fixed SAML2 session timeout handling during XHR requests
 - [web] fixed renaming a folder under iOS
 - [web] fixed download of exported folders under iOS
 - [web] improved server-side CSS sanitizer
 - [web] match recipient address when replying (#4495)
 - [eas] improved alarms syncing with EAS devices (#4351)
 - [eas] avoid potential cache update when breaking sync queries (#4422)
 - [eas] fixed EAS search

4.0.0 (2018-03-07)
------------------

New features
 - [core] full S/MIME support
 - [core] can now invite attendees to exceptions only (#2561)
 - [core] add support for module constraints in SQL sources
 - [core] add support for listRequiresDot in SQL sources
 - [web] add support for SearchFieldNames in SQL sources
 - [web] display freebusy information of owner in appointment editor
 - [web] register SOGo as a handler for the mailto scheme (#1223)
 - [web] new events list view where events are grouped by day
 - [web] user setting to always show mail editor inside current window or in popup window