@@ -1,6 +1,9 @@
 4.x.x (2018-xx-xx)
 ------------------
 
+New features
+ - [web] move mailboxes (#644, #3511, #4479)
+
 Bug fixes
  - [core] handle multi-valued mozillasecondemail attribute mapping
 
